Setup basic view-credential route and controller on the backend.

--- a/frontend/src/scss/abstract/_variables.scss
+++ b/frontend/src/scss/abstract/_variables.scss
@@ -8,7 +8,14 @@ $mid-blue: #000058;
 $darkest-charcoal: #171D22;
 $mid-charcoal: #212B31;
 $light-charcoal: #2C3840;
+
+/* White */
+$white: #FFFFFF;
 $white-charcoal: #B7C4CD;
 $white-charcoal-dark: #9FB1BE;
 
-$white: #FFFFFF;
+/* Green */
+$forest-green: #228B22;
+
+/* Red */
+$mid-red: #8B2222;
