--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -7,9 +7,15 @@
 
 @import 'components/buttons';
 @import 'components/header';
+@import 'components/navigationBar';
 
 @import 'layout/header';
+@import 'layout/home';
 @import 'layout/landingPage';
+@import 'layout/login';
+@import 'layout/loginFeedback';
+@import 'layout/logoutFeedback';
+@import 'layout/navigationBar';
 @import 'layout/registration';
 @import 'layout/registrationFeedback';
 
