Add styling to the ViewCredentialsRepo component.

--- a/frontend/src/scss/abstract/_variables.scss
+++ b/frontend/src/scss/abstract/_variables.scss
@@ -9,10 +9,13 @@ $darkest-charcoal: #171D22;
 $mid-charcoal: #212B31;
 $light-charcoal: #2C3840;
 
-/* White */
+/* Whites and Shadows */
 $white: #FFFFFF;
 $white-charcoal: #B7C4CD;
 $white-charcoal-dark: #9FB1BE;
+$light-shadow: rgba(0, 0, 0, 0.2);
+$mid-shadow: rgba(0, 0, 0, 0.5);
+$mid-shadow: rgba(0, 0, 0, 0.8);
 
 /* Green */
 $forest-green: #228B22;
