--- a/frontend/src/scss/main.css
+++ b/frontend/src/scss/main.css
@@ -1,13 +1,13 @@
 /* Import of SCSS files used to generate the main.css stylesheet */ /* Colour schema */
 /* Blue */
 /* Charcoal */
-/* White */
+/* Whites and Shadows */
 /* Green */
 /* Red */
 /* Import to enable use of variables */ /* Colour schema */
 /* Blue */
 /* Charcoal */
-/* White */
+/* Whites and Shadows */
 /* Green */
 /* Red */
 /* Global reset */
@@ -39,7 +39,7 @@ body {
 /* Import to enable use of variables */ /* Colour schema */
 /* Blue */
 /* Charcoal */
-/* White */
+/* Whites and Shadows */
 /* Green */
 /* Red */
 .landing-container {
@@ -136,7 +136,7 @@ body {
 /* Import to enable use of variables */ /* Colour schema */
 /* Blue */
 /* Charcoal */
-/* White */
+/* Whites and Shadows */
 /* Green */
 /* Red */
 /* Styling of the header that appears at the top of all pages */
@@ -144,6 +144,7 @@ body {
   background-color: #9FB1BE;
   padding: 1rem;
   border-radius: 0.5rem;
+  box-shadow: 1rem 1rem 3rem #2C3840, -1rem -1rem 3rem #B7C4CD;
 }
 .header-container .header-logo .header-logo_img {
   height: 10rem;
@@ -154,6 +155,14 @@ body {
   background-color: #9FB1BE;
   padding: 1rem;
   border-radius: 0.5rem;
+  box-shadow: 1rem 1rem 3rem #2C3840, -1rem -1rem 3rem #B7C4CD;
+}
+
+.card {
+  box-shadow: 1rem 1rem 3rem #2C3840, -1rem -1rem 3rem #B7C4CD;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
 }
 
 /* Layout of the header at the top of all renders */
@@ -300,6 +309,30 @@ body {
   width: 80%;
 }
 
+/* Layout and size of the loading spinner */
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+}
+.spinner-container .spinner {
+  height: 5rem;
+  width: 5rem;
+}
+
+.card {
+  width: 133rem;
+  margin: 5rem auto;
+  border-radius: 1rem;
+}
+
+/* Responsive screen width laptop to larger screens */
+@media only screen and (min-width: 104rem) {
+  .card {
+    width: 138rem;
+  }
+}
 /* Import of Google Font 'Lato' */
 
 /*# sourceMappingURL=main.css.map */
