--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'components/buttons';
 @import 'components/header';
 @import 'components/navigationBar';
+@import 'components/table';
 
 @import 'layout/header';
 @import 'layout/home';
@@ -18,5 +19,7 @@
 @import 'layout/navigationBar';
 @import 'layout/registration';
 @import 'layout/registrationFeedback';
+@import 'layout/spinner';
+@import 'layout/table';
 
 @import 'vendors/googleFonts';
