--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -10,6 +10,8 @@
 @import 'components/navigationBar';
 @import 'components/table';
 
+@import 'layout/addCredentialRepo';
+@import 'layout/addCredentialFeedback';
 @import 'layout/header';
 @import 'layout/home';
 @import 'layout/landingPage';
