--- a/frontend/src/scss/base/_typography.scss
+++ b/frontend/src/scss/base/_typography.scss
@@ -25,10 +25,26 @@
   }
 }
 
+/* Typography of the login page */
+.login-form {
+  .login-form__heading {
+    text-align: center;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    color: $dark-blue;
+    font-size: 4rem;
+    font-weight: 300;
+    text-shadow: 2px 2px 6px $darkest-charcoal,
+    -2px -2px 6px $white-charcoal;
+
+  }
+}
+
 /* Typography of the registration feedback page */
 .feedback-container,
 .login-feedback-container,
-.logout-feedback-container {
+.logout-feedback-container,
+.add-credentials-container {
   .primary-message {
     font-weight: 300;
     font-size: 5rem;
@@ -36,7 +52,6 @@
     text-shadow: 2px 2px 6px $darkest-charcoal,
     -2px -2px 6px $white-charcoal;
     text-align: center;
-
   }
 
   .success {
@@ -51,5 +66,19 @@
     text-align: center;
     font-size: 2rem;
     color: $mid-blue;
+  }
+}
+
+/* Typography of the add credential repo page */
+.add-repo-form {
+  .add-repo-form__heading {
+    text-align: center;
+    margin: 5rem auto;
+    text-transform: uppercase;
+    color: $dark-blue;
+    font-size: 4rem;
+    font-weight: 300;
+    text-shadow: 2px 2px 6px $darkest-charcoal,
+    -2px -2px 6px $white-charcoal;
   }
 }
