Final draft of reassignment to OU/Divisions. Backend, frontend and styling done.

--- a/frontend/src/scss/base/_typography.scss
+++ b/frontend/src/scss/base/_typography.scss
@@ -84,3 +84,30 @@
   }
 }
 
+/* Typography of the reassign user page */
+.reassign-user-wrapper {
+  h2,
+  h3 {
+    font-weight: 700;
+    color: $mid-blue;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 3px $darkest-charcoal,
+    -1px -1px 3px $white-charcoal;
+    text-align: center;
+  }
+
+  h3 {
+    font-weight: unset;
+    text-align: left;
+    text-transform: unset;
+    color: $mid-red;
+  }
+
+    .h2 {
+      color: $mid-blue;
+      text-shadow: 1px 1px 3px $darkest-charcoal,
+      -1px -1px 3px $white-charcoal;
+      color: $forest-green;
+      font-weight: unset;
+    }
+}
