--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'layout/loginFeedback';
 @import 'layout/logoutFeedback';
 @import 'layout/navigationBar';
+@import 'layout/reassign-user';
 @import 'layout/registration';
 @import 'layout/registrationFeedback';
 @import 'layout/spinner';
