--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -12,6 +12,7 @@
 
 @import 'layout/addCredentialRepo';
 @import 'layout/addCredentialFeedback';
+@import 'layout/changeRole';
 @import 'layout/header';
 @import 'layout/home';
 @import 'layout/landingPage';
